--- a/src/app/movie-detail/movie-detail.component.css
+++ b/src/app/movie-detail/movie-detail.component.css
@@ -1,84 +1,95 @@
-.movie-container {
-  color: white;
+.movie-detail-container {
   font-family: 'Lato', sans-serif;
+  width: 100%;
   height: 600px;
+  max-height: 700px;
+  color: white;
+  display: grid;
+  grid-template-columns: minmax(150px, 2fr) 4fr .5fr .5fr;
+  grid-template-rows: 1fr 1fr 4fr;
+  grid-gap: 10px;
+  grid-template-areas:
+  "img title alert alert"
+  "img actions specs specs-details"
+  "img overview specs specs-details";
+
 }
 
-.movie-image {
-  margin-left: 120px;
-  margin-top: 60px;
+.img-container {
+  grid-area: img;
+  justify-self: center;
+  align-self: center;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+.title-container {
+  grid-area: title;
+  justify-self: start;
+}
+
+.actions-container {
+  grid-area: actions;
+  margin-top: 20px;
+}
+
+.overview-container {
+  grid-area: overview;
+}
+
+.specs-container {
+  grid-area: specs;
+  color: rgb(189, 189, 189);
+  font-size: 1vw;
+  margin-top: 150px;
+}
+
+.specs-detail-container {
+  grid-area: specs-details;
+  font-size: 1vw;
+  margin-top: 150px;
+}
+
+.specs-container > div {
+  margin-bottom: 60px;
+}
+
+.specs-detail-container > div {
+  margin-bottom: 60px;
 }
 
 .movie-title {
-  margin-top: 40px;
-}
-
-.release-year {
-  color: gray;
-  font-size: 28px;
+  font-size: 3vw;
 }
 
 .save-actions {
   margin-top: 35px;
 }
 
-.glyphicon {
-  margin-left: 40px;
-  font-size: 25px;
-}
-
 .overview-header {
   margin-top: 65px;
 }
+
 .overview-body {
-  font-size: 18px;
+  font-size: 1.25vw;
   line-height: 1.75em;
   margin-top: 20px;
-  margin-right: 80px;
-}
-
-.movie-metadata {
-  margin-top: 200px;
-  font-size: 18px;
-  color: rgb(189, 189, 189);
-}
-
-
-.runtime, .original-language, .genres {
-  margin-top: 45px;
-}
-
-.circle {
-  border-radius: 50%;
-  width: 36px;
-  height: 36px;
-  padding: 8px;
-
-  background: #fff;
-  border: 2px solid #666;
-  color: #666;
-  text-align: center;
-
-  font: 32px Arial, sans-serif;
-}
-
-.glyphicon {
-  font-size: 32px;
+  padding-right: 40px;
 }
 
 .glyphicon-ring {
-  width: 60px;
-  height: 60px;
+  width: 4.5vw;
+  height: 4.5vw;
   border-radius: 50%;
-  border: 4px solid white;
+  border: .22vw solid white;
   color: white;
   display: inline-table;
   text-align: center;
-  margin-right: 3em;
+  margin-right: 3vw;
 }
 
 .glyphicon-ring .glyphicon-bordered {
-  font-size: 20px;
+  font-size: 1.5vw;
   vertical-align: middle;
   display: table-cell;
 }
@@ -94,13 +105,10 @@
 
 .star {
   color:rgb(184, 183, 183);
-  margin-left: 5px;
+  font-size: 1.5vw;
+  margin-left: .5vw;
   margin-top: 10px;
   margin-bottom: 10px;
-}
-
-#list:hover {
-
 }
 
 #favorite:hover, .favorite {
@@ -126,10 +134,10 @@
 .rating-options {
   position: absolute;
   margin-top: 20px;
-  height: 58px;
+  height: 4vw;
+  width: auto;
   background-color: rgba(184, 183, 183, .2);
-  max-width: 250px;
-  margin-left: 205px;
+  margin-left: 18vw;
   padding-top: 3px;
   padding-bottom: 10px;
   padding-right: 22px;
@@ -139,7 +147,7 @@
 }
 
 .rating-options > span {
-  width: 35px;
+  width: 1.75vw;
 }
 
 .rating-options > span:hover,
@@ -149,8 +157,8 @@
 
 .collection-box {
   position: absolute;
-  width: 370px;
-  height: 100px;
+  width: 20vw;
+  height: 6vw;
   background-color: #73AD21;
   border-radius: 5px;
   margin-top: 20px;
@@ -158,25 +166,38 @@
 
 .list-header {
   text-align: center;
+  font-size: 1vw;
   color: white;
-  margin-bottom: 25px;
+}
+
+.btn-add {
+  color: black;
+  font-size: 1vw;
+  border-radius: 5px;
+  width: auto;
+  height: auto;
+}
+
+.btn-add:hover {
+  cursor: pointer;
+  background-color: rgb(207, 207, 207);
 }
 
 .collections-select {
   display: inline-block;
-  width: 250px;
-  margin-left: 25px;
-  margin-right: 20px;
+  width: 60%;
+  height: 2vw;
+  margin-left: 1vw;
+  margin-right: 1vw;
   font-family: 'Lato', sans-serif;
 }
 
-.alert {
-  position: absolute;
-  width: 280px;
-  margin-top: 25px;
-  margin-left: 70px;
-  display: inline-block;
+.collection-box > btn {
+  font-size: small;
 }
 
-.list-header > button {
+.alert {
+  grid-area: alert;
+  width: auto;
+  display: inline-block;
 }
