responsiveness done. Not mobile though

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,15 +3,14 @@
       <div class="navbar-header">
         <a class="navbar-brand" routerLink="/movies" id="Popular_Movies" (click)="changeCategory($event)">zMovies</a>
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="">
         <ul class="nav navbar-nav">
-          <!--<li><a routerLink="/movies/discover" id="Discover_Movies" (click)="changeCategory($event)">Discover</a></li>-->
-          <li><a routerLink="/movies" id="Popular_Movies" (click)="changeCategory($event)">Popular Movies</a></li>
-          <li><a routerLink="/movies" id="Top_Rated_Movies" (click)="changeCategory($event)">Top Rated Movies</a></li>
-          <li><a routerLink="/movies" id="Upcoming_Movies" (click)="changeCategory($event)">Upcoming Movies</a></li>
-          <li><a routerLink="/movies" id="Now_Playing_Movies" (click)="changeCategory($event)">Now Playing Movies</a></li>
+          <li><a routerLink="/movies" id="Popular_Movies" (click)="changeCategory($event)">Popular</a></li>
+          <li><a routerLink="/movies" id="Top_Rated_Movies" (click)="changeCategory($event)">Top Rated</a></li>
+          <li><a routerLink="/movies" id="Upcoming_Movies" (click)="changeCategory($event)">Upcoming</a></li>
+          <li><a routerLink="/movies" id="Now_Playing_Movies" (click)="changeCategory($event)">Now Playing</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right" style="margin-right: 40px">
+        <ul class="nav navbar-nav navbar-right" style="margin-right: 10px">
           <li><button routerLink="/profile" type="button" class="btn btn-success btn-lg">
             <span class="glyphicon glyphicon-list-alt"></span>
           </button>
