--- a/src/app/profile/movie-list/movie-list.component.css
+++ b/src/app/profile/movie-list/movie-list.component.css
@@ -1,70 +1,108 @@
-.movie-wrapper {
+.grid-header {
+  display: grid;
+  grid-template-columns: repeat(3fr);
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+  "left mid right"
+   "desc desc .";
+  font-family: 'Comfortaa', cursive;
+  margin: 30px 0px 30px 0px;
+}
 
-  margin-right: 5px;
-  margin-bottom: 35px;
-  height: 300px;
-  width: 900px;
+.edit-container {
+  grid-area: right;
+  justify-self: end;
+  align-self: center;
+}
+
+.description-container {
+  grid-area: desc;
+  font-size: medium;
+  color: gray;
+  margin-top: 20px;
+}
+
+.flex-content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-family: 'Comfortaa', cursive;
+}
+
+.movie-container {
+  font-family: 'Comfortaa', cursive;
+  width: 700px;
+  height: 262px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 1fr 4fr 1fr);
+  grid-template-rows: repeat(auto-fill, 1fr 2fr 1fr);
+  grid-template-areas:
+  "img header header delete"
+  "img body body body"
+  "img footer footer footer";
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05),
    0 6px 20px 0 rgba(0, 0, 0, 0.05);
+  margin-bottom: 50px;
+  margin-right: 0px;
+  grid-column-gap: 20px;
 }
 
-.movieImg {
-
-  min-height: 325;
+.movie-img {
+  grid-area: img;
 }
 
-.header {
-  font-family: 'Comfortaa', cursive;
-  margin-bottom: 10px;
+.movie-header {
+  grid-area: header;
+  padding-left: 10px;
 }
 
+.delete {
+  grid-area: delete;
+  justify-self: end;
+}
+
+.movie-body {
+  grid-area: body;
+  padding: 10px;
+  justify-self: center;
+  align-self: center;
+}
+
+.movie-footer {
+  grid-area: footer;
+  align-self: end;
+  padding-left: 20%;
+  padding-bottom: 10px;
+}
 .responsive {
   width: 100%;
   height: auto;
-  max-height: 273px;
+  display: block;
+  max-height: 262px;
   max-width: 182px;
+  min-width: 182px;
 }
 
-.movie-body-wrapper {
-  height: 200px;
-  max-height: 230px;
-}
-
-.movieTitle {
-  margin-bottom: 5px;
+.movie-title {
   font-size: 25px;
   font-family: 'Lato', sans-serif;
 }
 
-.releaseDate {
-  padding-bottom: 20px;
+.release-date {
   color: gray;
 }
 
-.movieDescription {
-  padding-right: 10px;
+.movie-description {
   font-size: 16px;
   color: rgb(102, 100, 100);
   font-family: 'Lato', sans-serif;
 }
 
-
 .more {
-  margin-top: 5px;
-  color: inherit
-}
+  color: inherit;
+  width: 75%;
 
-.more:focus {
-  outline: 0;
-}
-
-.outlinedDiv {
-  border-radius: 0;
-  background-color: white;
-  min-height: 278px;
-  max-height: 278px;
-  min-width: 900px;
-  max-width: 900px;
 }
 
 .glyphicon-ring {
@@ -75,7 +113,7 @@
   color: rgb(136, 136, 136);
   display: inline-table;
   text-align: center;
-  margin-right: 3em;
+  margin-right: 1em;
 }
 
 .glyphicon-ring .glyphicon-bordered {
@@ -91,17 +129,6 @@
 .glyphicon:hover {
   cursor: pointer;
   color: rgb(255, 255, 255);
-}
-
-.edit-list {
-  margin-left: 820px;
-  margin-bottom: 30px;
-}
-
-.list-description {
-  font-size: medium;
-  color: gray;
-  margin-top: 20px;
 }
 
 .btn-save {
