--- a/src/app/profile/movie-list/movie-list.component.html
+++ b/src/app/profile/movie-list/movie-list.component.html
@@ -1,48 +1,40 @@
 <div class="container">
-  <div class="header">
+  <div class="grid-header">
       <h2 class="title">
         {{movies?.name}}
       </h2>
-      <p class="list-description">{{movies?.description}}</p>
-  </div>
-  <div class="edit-list-div">
-    <button class="btn btn-default edit-list" data-toggle="modal" data-target="#editListModal">
-      Edit List
-    </button>
+      <p class="description-container">{{movies?.description}}</p>
+      <div class="edit-container">
+        <button class="btn btn-default" data-toggle="modal" data-target="#editListModal">
+          Edit List
+        </button>
+      </div>
   </div>
 
 <div *ngIf="movies?.movieToMovieCollections.length === 0" class="no-results">
   <h3>No movies added - <span><a routerLink="../../../movies">search movies</a></span></h3>
 </div>
-
-<div *ngFor="let movie of movies?.movieToMovieCollections" class="movie-wrapper">
-  <div class="outlinedDiv">
-    <div class="row">
-      <div class="col-xs-4">
-          <img class="movieImg responsive"
-            [src]="'https://image.tmdb.org/t/p/w780' + movie.movie.posterURL"
-            [alt]="movie.movie.title"/>
-
+<div class="flex-content">
+  <div class="movie-container" *ngFor="let movie of movies?.movieToMovieCollections">
+    <div class="movie-img">
+      <img class="responsive"
+          [src]="'https://image.tmdb.org/t/p/w780' + movie.movie.posterURL"
+          [alt]="movie.title"/>
+    </div>
+    <div class="movie-header">
+      <h4 class="movie-title">{{movie.movie.title === undefined ? movie.movie.name : movie.movie.title}}</h4>
+      <p class="release-date">{{movie.movie.releaseDate | date:'longDate'}}</p>
+    </div>
+    <div class="delete">
+      <div (click)="movieToRemove = movie" type="button" class="glyphicon-ring" style="margin-top: 10px;" data-toggle="modal" data-target="#myModal">
+        <span class="glyphicon glyphicon-remove glyphicon-bordered"></span>
       </div>
-      <div class="col-xs-7">
-        <div class="movie-body-wrapper">
-            <h4 class="movieTitle">{{movie.movie.title === undefined ? '' : movie.movie.title}}</h4>
-            <p class="releaseDate">{{movie.movie.releaseDate | date:'longDate'}}</p>
-            <p class="movieDescription">{{movie.movie.overview | truncate}}</p>
-        </div>
-
-        <div class="row">
-          <div class="col-xs-10 ">
-              <button [routerLink]="['/movie-detail', movie.movie.movieDbId]" type="button" class="btn btn-block btn-default more">More</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-xs-1">
-        <div (click)="movieToRemove = movie" type="button" class="glyphicon-ring" style="margin-top: 10px;" data-toggle="modal" data-target="#myModal">
-          <span class="glyphicon glyphicon-remove glyphicon-bordered"></span>
-        </div>
-      </div>
+    </div>
+    <div class="movie-body">
+      <p class="movie-description">{{movie.movie.overview | truncate}}</p>
+    </div>
+    <div class="movie-footer">
+      <button [routerLink]="['/movie-detail', movie.movie.movieDbId]" type="button" class="btn btn-block btn-default more">More</button>
     </div>
   </div>
 </div>
