--- a/src/app/profile/all-lists/all-lists.component.html
+++ b/src/app/profile/all-lists/all-lists.component.html
@@ -9,12 +9,12 @@
   </div>
 </div>
 <div class="flex-movie-lists">
-  <div *ngFor="let list of movieLists" [routerLink]="'../movie-list/' + list?.id" class="img-container"
-      [ngStyle]="{background: ' linear-gradient(rgba(0%, 0%, 0%, 0.7), rgba(0%, 0%, 0%, 0.7)), url(https://image.tmdb.org/t/p/w500_and_h282_face' + list?.movieToMovieCollections[0]?.movie?.backdropURL + ')'}">
+  <div *ngFor="let list of allMovieCollections" [routerLink]="'../movie-list/' + list.id" class="img-container"
+    #background=''  [ngStyle]="{background: 'linear-gradient(rgba(0%, 0%, 0%, 0.7), rgba(0%, 0%, 0%, 0.7)), url(https://image.tmdb.org/t/p/w500_and_h282_face' + list.movies[0]?.backdropURL + ')'}">
 
     <div class="collection-info">
-        <p class="collection-title">{{list?.name}}</p>
-        <p class="collection-count">{{list?.movieToMovieCollections.length}} movies in collection</p>
+        <p class="collection-title">{{list.name}}</p>
+        <p class="collection-count">{{list.movies.length}} movies in collection</p>
     </div>
   </div>
 </div>
