--- a/src/app/profile/all-lists/all-lists.component.html
+++ b/src/app/profile/all-lists/all-lists.component.html
@@ -10,7 +10,7 @@
 </div>
 <div class="flex-movie-lists">
   <div *ngFor="let list of allMovieCollections" [routerLink]="'../movie-list/' + list.id" class="img-container"
-    #background=''  [ngStyle]="{background: 'linear-gradient(rgba(0%, 0%, 0%, 0.7), rgba(0%, 0%, 0%, 0.7)), url(https://image.tmdb.org/t/p/w500_and_h282_face' + list.movies[0]?.backdropURL + ')'}">
+    #background=''  [ngStyle]="{background: 'linear-gradient(rgba(0%, 0%, 0%, 0.7), rgba(0%, 0%, 0%, 0.7)), url(https://image.tmdb.org/t/p/w500_and_h282_face' + 'getMovieBackdrop(list[0]?.movieId) | async' + ')'}">
 
     <div class="collection-info">
         <p class="collection-title">{{list.name}}</p>
